# cpu-fun

./: README.md  pyproject.toml
src/cpu_fun/: __init__.py
src/cpu_fun/os/scheduling/events/: action.py
src/cpu_fun/os/scheduling/process/: __init__.py  process.py  state.py
src/cpu_fun/os/scheduling/scheduler/: event.py  scheduler.py
src/cpu_fun/os/scheduling/scheduler/strategies/: __init__.py  strategy_base.py
src/cpu_fun/sim/jobs/: builder.py  job.py  seed.py
