[project]
name = "cpu-fun"
version = "0.1.0"
description = "Project for running lightweight CPU simulations in Python"
readme = "README.md"
authors = [
    { name = "zackjyoung3", email = "zackjyoung3@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
